Kubebuilder setup: fixed domain

--- a/config/samples/secrets.wayfair.com_v1alpha1_gsmsecret.yaml
+++ b/config/samples/secrets.wayfair.com_v1alpha1_gsmsecret.yaml
@@ -1,4 +1,4 @@
-apiVersion: secrets.wayfair.com.wayfair.com/v1alpha1
+apiVersion: secrets.wayfair.com/v1alpha1
 kind: GSMSecret
 metadata:
   labels:
