--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,7 +2,7 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/secrets.wayfair.com.wayfair.com_gsmsecrets.yaml
+- bases/secrets.wayfair.com_gsmsecrets.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patches:
