--- a/config/samples/secrets.wayfair.com_v1alpha1_gsmsecret.yaml
+++ b/config/samples/secrets.wayfair.com_v1alpha1_gsmsecret.yaml
@@ -1,9 +1,21 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: gsmsecret-test-ns
+---
 apiVersion: secrets.wayfair.com/v1alpha1
 kind: GSMSecret
 metadata:
   labels:
     app.kubernetes.io/name: gsm-operator
     app.kubernetes.io/managed-by: kustomize
-  name: gsmsecret-sample
+  name: my-gsm-secrets
+  namespace: gsmsecret-test-ns
 spec:
-  # TODO(user): Add fields here
+  targetSecret:
+    name: my-secret             # name of K8s Secret
+  gsmSecrets:
+    - key: MY_ENVVAR
+      projectId: "wf-gcp-prod"  # GSM Secret project ID
+      secretId: my-secret       # GSM secret name
+      version: "latest"         # recommend pinning a version for true “static”
