--- a/config/samples/secrets.wayfair.com_v1alpha1_gsmsecret.yaml
+++ b/config/samples/secrets.wayfair.com_v1alpha1_gsmsecret.yaml
@@ -3,6 +3,30 @@ kind: Namespace
 metadata:
   name: gsmsecret-test-ns
 ---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: gsm-operator-secret-writer
+  namespace: gsmsecret-test-ns
+rules:
+  - apiGroups: [""]
+    resources: ["secrets"]
+    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: gsm-operator-secret-writer
+  namespace: gsmsecret-test-ns
+subjects:
+  - kind: ServiceAccount
+    name: gsm-operator-controller-manager
+    namespace: gsm-operator-system
+roleRef:
+  kind: Role
+  name: gsm-operator-secret-writer
+  apiGroup: rbac.authorization.k8s.io
+---
 apiVersion: secrets.wayfair.com/v1alpha1
 kind: GSMSecret
 metadata:
@@ -16,6 +40,6 @@ spec:
     name: my-secret             # name of K8s Secret
   gsmSecrets:
     - key: MY_ENVVAR
-      projectId: "wf-gcp-prod"  # GSM Secret project ID
-      secretId: my-secret       # GSM secret name
+      projectId: "wf-gcp-us-cloud-plats-mcp-dev"  # GSM Secret project ID
+      secretId: bogus-test       # GSM secret name
       version: "latest"         # recommend pinning a version for true “static”
