Workload ID Setup

--- a/config/samples/secrets.wayfair.com_v1alpha1_gsmsecret.yaml
+++ b/config/samples/secrets.wayfair.com_v1alpha1_gsmsecret.yaml
@@ -3,6 +3,24 @@ kind: Namespace
 metadata:
   name: gsmsecret-test-ns
 ---
+apiVersion: secrets.wayfair.com/v1alpha1
+kind: GSMSecret
+metadata:
+  labels:
+    app.kubernetes.io/name: gsm-operator
+    app.kubernetes.io/managed-by: kustomize
+  name: my-gsm-secrets
+  namespace: gsmsecret-test-ns
+spec:
+  targetSecret:
+    name: my-secret                               # name of K8s Secret to create
+  gsmSecrets:
+    - key: MY_ENVVAR
+      projectId: "wf-gcp-us-cloud-plats-mcp-dev"  # GSM Secret project ID
+      secretId: bogus-test                        # GSM secret name
+      version: "latest"                           # recommend pinning a version for true “static”
+---
+# RBAC for Secrets Access: Grants gsm-operator-controller-manager access to secrets
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -27,19 +45,33 @@ roleRef:
   name: gsm-operator-secret-writer
   apiGroup: rbac.authorization.k8s.io
 ---
-apiVersion: secrets.wayfair.com/v1alpha1
-kind: GSMSecret
+# RBAC for TokenRequest delegation: allows gsm-operator-controller-manager to obtain a short-lived token representing a ServiceAccount gsm-reader in gsmsecret-test-ns
+apiVersion: v1
+kind: ServiceAccount
 metadata:
-  labels:
-    app.kubernetes.io/name: gsm-operator
-    app.kubernetes.io/managed-by: kustomize
-  name: my-gsm-secrets
+  name: gsm-reader
   namespace: gsmsecret-test-ns
-spec:
-  targetSecret:
-    name: my-secret             # name of K8s Secret
-  gsmSecrets:
-    - key: MY_ENVVAR
-      projectId: "wf-gcp-us-cloud-plats-mcp-dev"  # GSM Secret project ID
-      secretId: bogus-test       # GSM secret name
-      version: "latest"         # recommend pinning a version for true “static”
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: allow-operator-tokenrequest
+  namespace: gsmsecret-test-ns
+rules:
+  - apiGroups: [""]
+    resources: ["serviceaccounts/token"]
+    verbs: ["create"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: allow-operator-tokenrequest
+  namespace: gsmsecret-test-ns
+subjects:
+  - kind: ServiceAccount
+    name: gsm-operator-controller-manager
+    namespace: gsm-operator-system
+roleRef:
+  kind: Role
+  name: allow-operator-tokenrequest
+  apiGroup: rbac.authorization.k8s.io
