--- a/config/crd/bases/secrets.pize.com_gsmsecrets.yaml
+++ b/config/crd/bases/secrets.pize.com_gsmsecrets.yaml
@@ -4,9 +4,9 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.19.0
-  name: gsmsecrets.secrets.wayfair.com
+  name: gsmsecrets.secrets.pize.com
 spec:
-  group: secrets.wayfair.com
+  group: secrets.pize.com
   names:
     kind: GSMSecret
     listKind: GSMSecretList
