--- a/config/rbac/gsmsecret_editor_role.yaml
+++ b/config/rbac/gsmsecret_editor_role.yaml
@@ -1,7 +1,7 @@
 # This rule is not used by the project gsm-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants permissions to create, update, and delete resources within the secrets.wayfair.com.
+# Grants permissions to create, update, and delete resources within the secrets.pize.com.
 # This role is intended for users who need to manage these resources
 # but should not control RBAC or manage permissions for others.
 
@@ -14,7 +14,7 @@ metadata:
   name: gsmsecret-editor-role
 rules:
 - apiGroups:
-  - secrets.wayfair.com
+  - secrets.pize.com
   resources:
   - gsmsecrets
   verbs:
@@ -26,7 +26,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - secrets.wayfair.com
+  - secrets.pize.com
   resources:
   - gsmsecrets/status
   verbs:
