--- a/config/samples/secrets.pize.com_v1alpha1_gsmsecret.yaml
+++ b/config/samples/secrets.pize.com_v1alpha1_gsmsecret.yaml
@@ -3,7 +3,7 @@ kind: Namespace
 metadata:
   name: gsmsecret-test-ns
 ---
-apiVersion: secrets.wayfair.com/v1alpha1
+apiVersion: secrets.pize.com/v1alpha1
 kind: GSMSecret
 metadata:
   labels:
