--- a/config/rbac/gsmsecret_admin_role.yaml
+++ b/config/rbac/gsmsecret_admin_role.yaml
@@ -1,7 +1,7 @@
 # This rule is not used by the project gsm-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants full permissions ('*') over secrets.wayfair.com.
+# Grants full permissions ('*') over secrets.pize.com.
 # This role is intended for users authorized to modify roles and bindings within the cluster,
 # enabling them to delegate specific permissions to other users or groups as needed.
 
@@ -14,13 +14,13 @@ metadata:
   name: gsmsecret-admin-role
 rules:
 - apiGroups:
-  - secrets.wayfair.com
+  - secrets.pize.com
   resources:
   - gsmsecrets
   verbs:
   - '*'
 - apiGroups:
-  - secrets.wayfair.com
+  - secrets.pize.com
   resources:
   - gsmsecrets/status
   verbs:
