--- a/config/rbac/gsmsecret_viewer_role.yaml
+++ b/config/rbac/gsmsecret_viewer_role.yaml
@@ -1,7 +1,7 @@
 # This rule is not used by the project gsm-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants read-only access to secrets.wayfair.com resources.
+# Grants read-only access to secrets.pize.com resources.
 # This role is intended for users who need visibility into these resources
 # without permissions to modify them. It is ideal for monitoring purposes and limited-access viewing.
 
@@ -14,7 +14,7 @@ metadata:
   name: gsmsecret-viewer-role
 rules:
 - apiGroups:
-  - secrets.wayfair.com
+  - secrets.pize.com
   resources:
   - gsmsecrets
   verbs:
@@ -22,7 +22,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - secrets.wayfair.com
+  - secrets.pize.com
   resources:
   - gsmsecrets/status
   verbs:
