--- a/env.sample
+++ b/env.sample
@@ -10,3 +10,10 @@ CLUSTER_REGION="<cluster region>"
 
 # Project that owns the Workload Identity Pool / OIDC provider: can be the same as CLUSTER_PROJECT_ID
 OIDC_PROJECT_ID="<oidc project id>"
+
+# Secrets Project
+SECRETS_PROJECT_ID="<project id where sample secrets live>"
+
+# Image registry and tag for gsm-operator
+REGISTRY="us-docker.pkg.dev/<gar project>/gsm-operator"
+IMAGE_TAG="$(git rev-parse --short HEAD)"
