--- a/config/samples/secrets.pize.com_v1alpha1_gsmsecret.yaml
+++ b/config/samples/secrets.pize.com_v1alpha1_gsmsecret.yaml
@@ -16,7 +16,7 @@ spec:
     name: my-secret                               # name of K8s Secret to create
   gsmSecrets:
     - key: MY_ENVVAR
-      projectId: "wf-gcp-us-cloud-plats-mcp-dev"  # GSM Secret project ID
+      projectId: "${SECRETS_PROJECT_ID}"          # GSM Secret project ID
       secretId: bogus-test                        # GSM secret name
       version: "latest"                           # recommend pinning a version for true “static”
 ---
