--- a/config/crd/bases/secrets.pize.com_gsmsecrets.yaml
+++ b/config/crd/bases/secrets.pize.com_gsmsecrets.yaml
@@ -52,8 +52,8 @@ spec:
                       minLength: 1
                       type: string
                     projectId:
-                      description: |-
-                        ProjectID is the GCP project that owns the Secret Manager secret.
+                      description: ProjectID is the GCP project that owns the Secret
+                        Manager secret.
                       minLength: 1
                       type: string
                     secretId:
@@ -89,6 +89,12 @@ spec:
                 required:
                 - name
                 type: object
+              wifAudience:
+                description: |-
+                  WIFAudience is the audience used when exchanging Kubernetes tokens via Google's STS.
+                  Example:
+                  "//iam.googleapis.com/projects/${oidc_project_number}/locations/global/workloadIdentityPools/gsm-operator-pool/providers/gsm-operator-provider"
+                type: string
             required:
             - gsmSecrets
             - targetSecret
