--- a/config/samples/secrets.pize.com_v1alpha1_gsmsecret.yaml
+++ b/config/samples/secrets.pize.com_v1alpha1_gsmsecret.yaml
@@ -14,6 +14,7 @@ metadata:
 spec:
   targetSecret:
     name: my-secret                               # name of K8s Secret to create
+  wifAudience: "${WIF_AUDIENCE}"
   gsmSecrets:
     - key: MY_ENVVAR
       projectId: "${SECRETS_PROJECT_ID}"          # GSM Secret project ID
