--- a/config/crd/bases/secrets.pize.com_gsmsecrets.yaml
+++ b/config/crd/bases/secrets.pize.com_gsmsecrets.yaml
@@ -77,6 +77,12 @@ spec:
                   type: object
                 minItems: 1
                 type: array
+              serviceAccountName:
+                default: gsm-reader
+                description: ServiceAccountName is the Kubernetes ServiceAccount to
+                  impersonate for WIF.
+                minLength: 1
+                type: string
               targetSecret:
                 description: TargetSecret describes the Kubernetes Secret to create
                   or update.
