--- a/config/crd/bases/secrets.pize.com_gsmsecrets.yaml
+++ b/config/crd/bases/secrets.pize.com_gsmsecrets.yaml
@@ -39,6 +39,19 @@ spec:
           spec:
             description: Spec defines the desired state of GSMSecret.
             properties:
+              GSA:
+                default: gsm-reader
+                description: |-
+                  FIXME: NOT YET IMPLEMENTED!!!
+                  GSA is the **GCP** ServiceAccount to impersonate for WIF.
+                minLength: 1
+                type: string
+              KSA:
+                default: gsm-reader
+                description: KSA is the **Kubernetes** ServiceAccount to impersonate
+                  for WIF.
+                minLength: 1
+                type: string
               gsmSecrets:
                 description: Secrets is the list of GSM secrets to materialize into
                   the target Secret.
@@ -63,26 +76,19 @@ spec:
                       minLength: 1
                       type: string
                     version:
-                      default: latest
                       description: |-
                         Version is the Secret Manager secret version to materialize.
                         Examples: "7" or "latest".
-                        If omitted, the controller defaults to "latest".
                       minLength: 1
                       type: string
                   required:
                   - key
                   - projectId
                   - secretId
+                  - version
                   type: object
                 minItems: 1
                 type: array
-              serviceAccountName:
-                default: gsm-reader
-                description: ServiceAccountName is the Kubernetes ServiceAccount to
-                  impersonate for WIF.
-                minLength: 1
-                type: string
               targetSecret:
                 description: TargetSecret describes the Kubernetes Secret to create
                   or update.
