Some more tests

--- a/config/samples/secrets.pize.com_v1alpha1_gsmsecret.yaml
+++ b/config/samples/secrets.pize.com_v1alpha1_gsmsecret.yaml
@@ -11,10 +11,11 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: my-gsm-secrets
   namespace: gsmsecret-test-ns
+  annotations:
+    secrets.pize.com/wif-audience: "${WIF_AUDIENCE}"
 spec:
   targetSecret:
     name: my-secret                               # name of K8s Secret to create
-  wifAudience: "${WIF_AUDIENCE}"
   gsmSecrets:
     - key: MY_ENVVAR
       projectId: "${SECRETS_PROJECT_ID}"          # GSM Secret project ID
