--- a/config/crd/bases/secrets.pize.com_gsmsecrets.yaml
+++ b/config/crd/bases/secrets.pize.com_gsmsecrets.yaml
@@ -50,23 +50,27 @@ spec:
                         Key is the key under which the value will be stored in the target Secret's data.
                         Example: "MY_ENVVAR".
                       minLength: 1
+                      pattern: ^[A-Za-z0-9._-]+$
                       type: string
                     projectId:
                       description: ProjectID is the GCP project that owns the Secret
                         Manager secret.
                       minLength: 1
+                      pattern: ^[a-z][a-z0-9-]{4,28}[a-z0-9]$
                       type: string
                     secretId:
                       description: |-
                         SecretID is the name of the Secret Manager secret.
                         Example: "my-secret".
                       minLength: 1
+                      pattern: ^[A-Za-z][A-Za-z0-9_-]{0,253}[A-Za-z0-9]$
                       type: string
                     version:
                       description: |-
                         Version is the Secret Manager secret version to materialize.
                         Examples: "7" or "latest".
                       minLength: 1
+                      pattern: ^(latest|[1-9][0-9]*)$
                       type: string
                   required:
                   - key
@@ -84,6 +88,7 @@ spec:
                     description: Name is the name of the Kubernetes Secret to create
                       or update.
                     minLength: 1
+                    pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?$
                     type: string
                 required:
                 - name
