--- a/config/samples/secrets.pize.com_v1alpha1_gsmsecret.yaml
+++ b/config/samples/secrets.pize.com_v1alpha1_gsmsecret.yaml
@@ -47,11 +47,11 @@ roleRef:
   name: gsm-operator-secret-writer
   apiGroup: rbac.authorization.k8s.io
 ---
-# RBAC for TokenRequest delegation: allows gsm-operator-controller-manager to obtain a short-lived token representing a ServiceAccount gsm-reader in gsmsecret-test-ns
+# RBAC for TokenRequest delegation: allows gsm-operator-controller-manager to obtain a short-lived token representing a ServiceAccount default in gsmsecret-test-ns
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: gsm-reader
+  name: default
   namespace: gsmsecret-test-ns
 ---
 apiVersion: rbac.authorization.k8s.io/v1
