--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -9,8 +9,12 @@ rules:
   resources:
   - secrets
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - secrets.pize.com
