--- a/env.sample
+++ b/env.sample
@@ -16,4 +16,4 @@ SECRETS_PROJECT_ID="<project id where sample secrets live>"
 
 # Image registry and tag for gsm-operator
 REGISTRY="us-docker.pkg.dev/<gar project>/gsm-operator"
-IMAGE_TAG="test"
+TAG="test"
