--- a/config/samples/secrets.pize.com_v1alpha1_gsmsecret.yaml
+++ b/config/samples/secrets.pize.com_v1alpha1_gsmsecret.yaml
@@ -13,6 +13,7 @@ metadata:
   namespace: gsmsecret-test-ns
   annotations:
     secrets.pize.com/wif-audience: "${WIF_AUDIENCE}"
+    secrets.pize.com/gsa: "gsmsecret-test@wf-gcp-us-cloud-plats-mcp-dev.iam.gserviceaccount.com"
 spec:
   targetSecret:
     name: my-secret                               # name of K8s Secret to create
