--- a/config/samples/secrets.gsm-operator.com_v1alpha1_gsmsecret.yaml
+++ b/config/samples/secrets.gsm-operator.com_v1alpha1_gsmsecret.yaml
@@ -3,7 +3,7 @@ kind: Namespace
 metadata:
   name: gsmsecret-test-ns
 ---
-apiVersion: secrets.pize.com/v1alpha1
+apiVersion: secrets.gsm-operator.io/v1alpha1
 kind: GSMSecret
 metadata:
   labels:
@@ -12,7 +12,7 @@ metadata:
   name: my-gsm-secrets
   namespace: gsmsecret-test-ns
   annotations:
-    secrets.pize.com/wif-audience: "${WIF_AUDIENCE}"
+    secrets.gsm-operator.io/wif-audience: "${WIF_AUDIENCE}"
 spec:
   targetSecret:
     name: my-secret                               # name of K8s Secret to create
