--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -17,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - secrets.pize.com
+  - secrets.gsm-operator.io
   resources:
   - gsmsecrets
   verbs:
@@ -29,13 +29,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - secrets.pize.com
+  - secrets.gsm-operator.io
   resources:
   - gsmsecrets/finalizers
   verbs:
   - update
 - apiGroups:
-  - secrets.pize.com
+  - secrets.gsm-operator.io
   resources:
   - gsmsecrets/status
   verbs:
