--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,4 @@
 ## Append samples of your project ##
 resources:
-- secrets.pize.com_v1alpha1_gsmsecret.yaml
+- secrets.gsm-operator.io_v1alpha1_gsmsecret.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
