--- a/config/crd/bases/secrets.gsm-operator.io_gsmsecrets.yaml
+++ b/config/crd/bases/secrets.gsm-operator.io_gsmsecrets.yaml
@@ -43,15 +43,45 @@ spec:
                 description: Secrets is the list of GSM secrets to materialize into
                   the target Secret.
                 items:
-                  description: GSMSecretEntry describes a single GSM secret to materialize.
+                  description: |-
+                    GSMSecretEntry describes a single GSM secret to materialize.
+                    Either Key or Keys must be specified, but not both.
                   properties:
                     key:
                       description: |-
                         Key is the key under which the value will be stored in the target Secret's data.
+                        Use this for simple single-key mappings. Mutually exclusive with Keys.
                         Example: "MY_ENVVAR".
                       minLength: 1
                       pattern: ^[A-Za-z0-9._-]+$
                       type: string
+                    keys:
+                      description: |-
+                        Keys is a list of key-value mappings for storing the secret under multiple keys
+                        or extracting specific values. Mutually exclusive with Key.
+                      items:
+                        description: SecretKeyMapping represents a key-value pair
+                          for mapping GSM secret data to K8s Secret keys.
+                        properties:
+                          key:
+                            description: |-
+                              Key is the key under which the value will be stored in the target Secret's data.
+                              Accepts either a simple key name (e.g., "MY_KEY") or a JSON Pointer path (RFC 6901, e.g., "/foo/bar").
+                            minLength: 1
+                            pattern: ^([A-Za-z0-9._-]+|(/[^/]*)+)$
+                            type: string
+                          value:
+                            description: |-
+                              Value is a JSON Pointer (RFC 6901) path to extract from the secret payload.
+                              Example: "/username" or "/data/0/password".
+                            minLength: 1
+                            pattern: ^(/[^/]*)+$
+                            type: string
+                        required:
+                        - key
+                        - value
+                        type: object
+                      type: array
                     projectId:
                       description: ProjectID is the GCP project that owns the Secret
                         Manager secret.
@@ -73,11 +103,14 @@ spec:
                       pattern: ^(latest|[1-9][0-9]*)$
                       type: string
                   required:
-                  - key
                   - projectId
                   - secretId
                   - version
                   type: object
+                  x-kubernetes-validations:
+                  - message: exactly one of 'key' or 'keys' must be specified
+                    rule: (has(self.key) && self.key != "") != (has(self.keys) &&
+                      size(self.keys) > 0)
                 minItems: 1
                 type: array
               targetSecret:
